2013-02-08  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR1297: cacao and jamvm parallel unpack failures
	* Makefile.am:
	Add aliases for extract-cacao and extract-jamvm.
	(extract-cacao): Depend on download-cacao.
	(extract-jamvm): Depend on download-jamvm.

2013-02-08  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add additional patches to
	fix regressions introduced by security fixes
	6664509 & 7201064.
	* patches/openjdk/8004341-jck_dialog_failure.patch:
	Fix issue with Dialog serialization.
	* patches/openjdk/8005615-failure_to_load_logger_implementation.patch:
	Fix issue with use of custom LogManagers.

2013-02-04  Andrew John Hughes  <gnu.andrew@redhat.com>
            Omair Majid <omajid@redhat.com>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add 7010849 backport.
	(ICEDTEA_ECJ_PATCHES): Remove 7010849 backport.
	* patches/ecj/7010849-make_sa-jdi_build_with_1.5.patch: Rename to ...
	* patches/openjdk/7010849-modernise_sa.patch: New file.

2013-02-13  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am: Add latest security fixes.
	* patches/openjdk/6633275-shaped_translucent_windows.patch,
	* patches/openjdk/7162902-corba_fixes.patch:
	Regenerated against new fixes.
	* patches/security/20130201/6563318.patch,
	* patches/security/20130201/6664509.patch,
	* patches/security/20130201/6776941.patch,
	* patches/security/20130201/7141694.patch,
	* patches/security/20130201/7173145.patch,
	* patches/security/20130201/7186945.patch,
	* patches/security/20130201/7186948.patch,
	* patches/security/20130201/7186952.patch,
	* patches/security/20130201/7186954.patch,
	* patches/security/20130201/7192392.patch,
	* patches/security/20130201/7192393.patch,
	* patches/security/20130201/7192977.patch,
	* patches/security/20130201/7197546.patch,
	* patches/security/20130201/7200491.patch,
	* patches/security/20130201/7200500.patch,
	* patches/security/20130201/7201064.patch,
	* patches/security/20130201/7201066.patch,